[package]
name = "rust-trondheim-meetup-ui"
version = "0.1.0"
authors = ["Christian Brevik <christian.brevik@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.7", features = ["blocking"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
slint = "1.6"

[build-dependencies]
slint-build = "1.6"