[package]
name = "rust-trondheim-meetup-ui"
version = "0.1.0"
authors = ["Christian Brevik <christian.brevik@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.39.0"
slint = "1.6"
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }

[build-dependencies]
slint-build = "1.6"
